# archmed

./: .gitignore  README.md  pyproject.toml  slidesapi.py  slidesoauth.py  summarization_and_qna_transformers.py  utils.py
archmed/: get_wordcloud.py  pdf.py  presentationcreator.py  search.py  slidesapi.py  slidesoauth.py  summarization_and_qna_transformers.py
notebooks/: extract_pdf.ipynb
streamlit/: analyser.py  archmed_main.py  chatbotpage.py  keyword_wordcloud.py  presentation.py  researchworkspaceui.py  try.ipynb
