[tool.poetry]
name = "archmed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pdfplumber = "^0.8.0"
pandas = "^1.5.3"
ipykernel = "^6.21.2"
requests = "^2.28.2"
scholarly = "^1.7.11"
streamlit = "^1.19.0"
scipdf-mirror = "^0.1.dev0"
spacy = "3.4.1"
scipdf = {git = "https://github.com/titipata/scipdf_parser"}
transformers = "^4.26.1"
pdfminer-six = "^20221105"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
pymupdf = "^1.21.1"
pybliometrics = "^3.4.0"
arxiv = "^1.4.3"
st-pages = "^0.3.4"
streamlit-chat = "^0.0.2.1"
streamlit-extras = "^0.2.6"
wordcloud = "^1.8.2.2"
en-core-sci-md = {path = "/Users/pratham/Downloads/en_core_sci_md-0.5.1.tar.gz"}
webdriver-manager = "^3.8.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
